Support downloading icon images from the net